Switch from tools-owners to tools-repo-maintainer
Its cleaner to have just the one group covering all of the
permissions defined within this project.

--- a/project.config
+++ b/project.config
@@ -6,20 +6,19 @@
 [submit]
 	action = fast forward only
 [access "refs/*"]
-	owner = group tools-owners
+	owner = group tools-repo-maintainer
 [access "refs/for/refs/heads/stable"]
 	exclusiveGroupPermissions = push
 [access "refs/heads/*"]
-	label-Verified = -1..+1 group tools-owners
-	label-Code-Review = -2..+2 group tools-owners
-	submit = group tools-owners
+	label-Verified = -1..+1 group tools-repo-maintainer
+	label-Code-Review = -2..+2 group tools-repo-maintainer
+	submit = group tools-repo-maintainer
 [access "refs/heads/maint"]
 	push = group tools-repo-maintainer
 [access "refs/heads/master"]
 	push = group tools-repo-maintainer
 [access "refs/heads/stable"]
-	exclusiveGroupPermissions = read create push
-	read = group Anonymous Users
+	exclusiveGroupPermissions = push
 	push = group tools-repo-maintainer
 [access "refs/tags/*"]
 	pushTag = group tools-repo-maintainer
