Rename group tools-repo-maintainer to repo-maintainer

--- a/project.config
+++ b/project.config
@@ -1,24 +1,25 @@
 [project]
 	description = repo - The Multiple Git Repository Tool
+	state = active
 [receive]
 	requireContributorAgreement = true
 	requireChangeId = true
 [submit]
 	action = fast forward only
 [access "refs/*"]
-	owner = group tools-repo-maintainer
+	owner = group repo-maintainer
 [access "refs/for/refs/heads/stable"]
 	exclusiveGroupPermissions = push
 [access "refs/heads/*"]
-	label-Verified = -1..+1 group tools-repo-maintainer
-	label-Code-Review = -2..+2 group tools-repo-maintainer
-	submit = group tools-repo-maintainer
+	label-Verified = -1..+1 group repo-maintainer
+	label-Code-Review = -2..+2 group repo-maintainer
+	submit = group repo-maintainer
 [access "refs/heads/maint"]
-	push = group tools-repo-maintainer
+	push = group repo-maintainer
 [access "refs/heads/master"]
-	push = group tools-repo-maintainer
+	push = group repo-maintainer
 [access "refs/heads/stable"]
 	exclusiveGroupPermissions = push
-	push = group tools-repo-maintainer
+	push = group repo-maintainer
 [access "refs/tags/*"]
-	pushTag = group tools-repo-maintainer
+	pushTag = group repo-maintainer
