Set parent to Public-Projects

--- a/project.config
+++ b/project.config
@@ -1,6 +1,7 @@
 [project]
 	description = repo - The Multiple Git Repository Tool
 	state = active
+	inheritFrom = Public-Projects
 [receive]
 	requireContributorAgreement = true
 	requireChangeId = true
