Set parent to Public-Projects

--- a/project.config
+++ b/project.config
@@ -1,7 +1,6 @@
 [project]
 	description = repo - The Multiple Git Repository Tool
 	state = active
-	inheritFrom = Public-Projects
 [receive]
 	requireContributorAgreement = true
 	requireChangeId = true
@@ -24,3 +23,5 @@
 	push = group repo-maintainer
 [access "refs/tags/*"]
 	pushTag = group repo-maintainer
+[access]
+	inheritFrom = Public-Projects
