Modified project settings

--- a/project.config
+++ b/project.config
@@ -5,7 +5,7 @@
 	requireContributorAgreement = true
 	requireChangeId = true
 [submit]
-	action = fast forward only
+	mergeContent = true
 [access "refs/*"]
 	owner = group repo-maintainer
 [access "refs/for/refs/heads/stable"]
