Permit contributors to rebase changes

--- a/project.config
+++ b/project.config
@@ -14,6 +14,7 @@
 	label-Verified = -1..+1 group repo-maintainer
 	label-Code-Review = -2..+2 group repo-maintainer
 	submit = group repo-maintainer
+	rebase = group repo-contributor
 [access "refs/heads/maint"]
 	push = group repo-maintainer
 [access "refs/heads/master"]
