Allow repo-contributor to abandon changes

--- a/project.config
+++ b/project.config
@@ -15,6 +15,7 @@
 	label-Code-Review = -2..+2 group repo-maintainer
 	submit = group repo-maintainer
 	rebase = group repo-contributor
+	abandon = group repo-contributor
 [access "refs/heads/maint"]
 	push = group repo-maintainer
 [access "refs/heads/master"]
