Allow repo-contributor to score Verified -1..+1

--- a/project.config
+++ b/project.config
@@ -11,6 +11,7 @@
 [access "refs/for/refs/heads/stable"]
 	exclusiveGroupPermissions = push
 [access "refs/heads/*"]
+	label-Verified = -1..+1 group repo-contributor
 	label-Verified = -1..+1 group repo-maintainer
 	label-Code-Review = -2..+2 group repo-maintainer
 	submit = group repo-maintainer
