Modify access rules

--- a/project.config
+++ b/project.config
@@ -24,5 +24,6 @@
 	push = group git-repo-maintainer
 [access "refs/tags/*"]
 	pushTag = group git-repo-maintainer
+	pushSignedTag = group git-repo-maintainer
 [access]
 	inheritFrom = Public-Projects
