Rename group git-repo-maintainer to repo-maintainer

--- a/project.config
+++ b/project.config
@@ -5,25 +5,25 @@
 	requireChangeId = true
 [submit]
 [access "refs/*"]
-	owner = group git-repo-maintainer
+	owner = group repo-maintainer
 [access "refs/for/refs/heads/stable"]
 	exclusiveGroupPermissions = push
 [access "refs/heads/*"]
-	label-Verified = -1..+1 group git-repo-maintainer
 	label-Verified = -1..+1 group repo-contributor
-	label-Code-Review = -2..+2 group git-repo-maintainer
-	submit = group git-repo-maintainer
+	label-Verified = -1..+1 group repo-maintainer
+	label-Code-Review = -2..+2 group repo-maintainer
+	submit = group repo-maintainer
 	rebase = group repo-contributor
 	abandon = group repo-contributor
 [access "refs/heads/maint"]
-	push = group git-repo-maintainer
+	push = group repo-maintainer
 [access "refs/heads/master"]
-	push = group git-repo-maintainer
+	push = group repo-maintainer
 [access "refs/heads/stable"]
 	exclusiveGroupPermissions = push
-	push = group git-repo-maintainer
+	push = group repo-maintainer
 [access "refs/tags/*"]
-	pushTag = group git-repo-maintainer
-	pushSignedTag = group git-repo-maintainer
+	pushTag = group repo-maintainer
+	pushSignedTag = group repo-maintainer
 [access]
 	inheritFrom = Public-Projects
