Use git-repo issue tracker for bug/issue links
Change-Id: Ib5f53ab734739094cc70d0b69f68bdf564e2557f

--- a/project.config
+++ b/project.config
@@ -35,3 +35,6 @@
 	label-Code-Review = -2..+2 group repo-maintainer
 	label-Verified = -1..+1 group repo-maintainer
 	submit = group repo-maintainer
+[commentlink "ph"]
+	match = "([Bb]ug|[Ii]ssue)\\s*#?(\\d+)"
+	link = https://code.google.com/p/git-repo/issues/detail?id=$2
