--- a/project.config
+++ b/project.config
@@ -27,3 +27,11 @@
 	pushSignedTag = group repo-maintainer
 [access]
 	inheritFrom = Public-Projects
+[access "refs/for/refs/meta/config"]
+	push = group repo-maintainer
+	pushMerge = group repo-maintainer
+[access "refs/meta/config"]
+	read = group repo-maintainer
+	label-Code-Review = -2..+2 group repo-maintainer
+	label-Verified = -1..+1 group repo-maintainer
+	submit = group repo-maintainer
